--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
     "@remix-run/css-bundle": "^2.5.1",
     "@remix-run/node": "^2.5.1",
