--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@aws-sdk/client-sns": "^3.501.0",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.3",
     "@emotion/server": "^11.11.0",
@@ -24,11 +25,13 @@
     "@supabase/supabase-js": "^2.39.3",
     "chroma-js": "^2.4.2",
     "isbot": "^4.1.0",
+    "openai": "^4.26.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
