--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@remix-run/server-runtime": "^2.5.1",
     "@supabase/supabase-js": "^2.39.3",
     "chroma-js": "^2.4.2",
-    "isbot": "^4.1.0",
     "openai": "^4.26.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -44,13 +43,19 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.20.0",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "prettier": "^3.2.4",
+    "serverless": "^3.38.0",
+    "serverless-esbuild": "^1.50.2",
+    "serverless-offline-sns": "^0.77.2",
     "typescript": "^5.1.6"
   },
   "engines": {
